
INCLUDE_DIRECTORIES( 
		${BULLET_PHYSICS_SOURCE_DIR}/src
		${BULLET_PHYSICS_SOURCE_DIR}/examples
		${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs
		${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs/enet/include
                ${BULLET_PHYSICS_SOURCE_DIR}/examples/ThirdPartyLibs/clsocket/src
		${PYTHON_INCLUDE_DIRS}
  )
IF(BUILD_PYBULLET_NUMPY)
	INCLUDE_DIRECTORIES(
		${PYTHON_NUMPY_INCLUDE_DIR}
	)
ENDIF()

ADD_DEFINITIONS(-DSTATIC_LINK_SPD_PLUGIN )

IF(ENABLE_VHACD)
ADD_DEFINITIONS(-DBT_ENABLE_VHACD)

INCLUDE_DIRECTORIES( 
  ../../Extras/VHACD/inc
  ../../Extras/VHACD/public
)
ENDIF(ENABLE_VHACD)
	
SET(pycram_bullet_SRCS
	pycram_bullet.c
)

IF(BUILD_CLSOCKET)
 ADD_DEFINITIONS(-DBT_ENABLE_CLSOCKET)
ENDIF()

IF(WIN32)
	LINK_LIBRARIES(
		${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}
	)
	IF(BUILD_ENET)
		ADD_DEFINITIONS(-DWIN32 -DBT_ENABLE_ENET)
	ENDIF()
	IF(BUILD_CLSOCKET)
		ADD_DEFINITIONS(-DWIN32)
	ENDIF()

ELSE(WIN32)
	IF(BUILD_ENET)
		ADD_DEFINITIONS(-DHAS_SOCKLEN_T -DBT_ENABLE_ENET)
	ENDIF()

	IF(BUILD_CLSOCKET)	
		ADD_DEFINITIONS(${OSDEF})
	ENDIF()
ENDIF(WIN32)



ADD_LIBRARY(pycram_bullet SHARED ${pycram_bullet_SRCS})

SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES POSTFIX "")

SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES SOVERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES DEBUG_POSTFIX "_d")


IF(WIN32)
	IF(BUILD_ENET OR BUILD_CLSOCKET)
		TARGET_LINK_LIBRARIES(pycram_bullet ws2_32 )
	ENDIF()

	SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES SUFFIX ".pyd" )
ENDIF(WIN32)

IF (APPLE)
  SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES SUFFIX ".so" )
ENDIF()



TARGET_LINK_LIBRARIES(pycram_bullet BulletRoboticsGUI BulletExampleBrowserLib BulletRobotics BulletFileLoader BulletWorldImporter BulletSoftBody BulletDynamics BulletCollision BulletInverseDynamicsUtils BulletInverseDynamics LinearMath OpenGLWindow gwen BussIK Bullet3Common)

IF (WIN32)
  TARGET_LINK_LIBRARIES(pycram_bullet ${PYTHON_LIBRARIES})
ELSEIF (APPLE)
  SET_TARGET_PROPERTIES(pycram_bullet PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
ENDIF ()
# else Linux: dont link

IF(WIN32)
  SET(PYTHON_SITE_PACKAGES Lib/site-packages CACHE PATH "Python install path")
ELSE()
  SET(PYTHON_SITE_PACKAGES lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages CACHE PATH "Python install path")
ENDIF()

INSTALL(TARGETS pycram_bullet DESTINATION ${PYTHON_SITE_PACKAGES})

